# tracer_school

./: README.md  setup.cfg
src/graphics_stuff/: basic_tracer.py
