[metadata]
name = tracer_school
version = 0.0.1
author = Andy
author_email = hi
description = Learning about graphics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaylward/tracer_school
project_urls =
    Bug Tracker = https://github.com/aaylward/tracer_school/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
